# foscam_controller

./: .gitignore  AGENTS.md  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: test.yml
foscam/: __init__.py  __main__.py  audio_gate.py  audio_gate_probe.py  cgi_console.py  cli.py  client.py  config_io.py  discover.py  display_pacing.py  motion.py  viewer.py
foscam/ui/: __init__.py  overlay.py  shell.py  theme.py  widgets.py
foscam/ui/assets/: theme_pool.json
scripts/: audio_gate_probe.py  live_audio_gate_test.py  publish_to_pypi.sh
tests/: conftest.py  test_audio_gate.py  test_audio_gate_integration.py  test_motion.py  test_stream_channels.py  test_viewer_display.py
